[package]
name = "baryonsweeper-itsybitsy_m0"
version = "0.1.0"
authors = ["Paul Sajna <hello@paulsajna.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

# for cargo flash
[package.metadata]
chip = "ATSAMD21G18A"

[dependencies]
baryonsweeper = { path = "../baryonsweeper", features=["itsybitsy_m0", "usb"] }
embedded-logger = { path = "../embedded-logger", features=["usb", "rtt"]}
fugit = "0.3.7"
itsybitsy_m0 = { version = "0.13.0", features=["usb"] }
panic-rtt-target = { version = "0.1.2", features=["cortex-m"] }
rtt-target = { version = "0.3.1", features=["cortex-m"] }
usb-device = "0.2.0"
usbd-serial = "0.1.0"
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"]}
critical-section = "1.1.2"

[profile.dev]
debug = true

[profile.release]
lto = true
opt-level = 3
debug = 2
