[package]
name = "baryonsweeper-metro_m4"
version = "0.1.0"
authors = ["Paul Sajna <hello@paulsajna.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

# for cargo flash
[package.metadata]
chip = "ATSAMD51J19A"

[dependencies]
baryonsweeper = { path = "../baryonsweeper", features=["metro_m4"]}
metro_m4 = { version = "0.12.0", features=["usb"] }
panic-rtt-target = { version = "0.1.2", features=["cortex-m"] }
rtt-target = { version = "0.3.1", features=["cortex-m"] }
usb-device = "0.2.0"
usbd-serial = "0.1.0"

[profile.dev]
debug = true

[profile.release]
lto = true
opt-level = 3
debug = 2
