[package]
edition = "2021"
name = "baryonsweeper-rp2040"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Paul Sajna <hello@paulsajna.com>"]

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "0.2.5", features = ["unproven"] }


panic-probe = { version = "0.3", features = ["print-defmt"] }
rp-pico = "0.8"

baryonsweeper = { path = "../baryonsweeper", features=["rp2040", "usb"] }
embedded-logger = { path = "../embedded-logger", features=["usb"]}

usbd-serial = "0.1.0"
usb-device = "0.2.9"
log = { version =  "0.4.20"}
defmt = "0.3.6"
defmt-rtt = "0.4.0"
rtt-target = "0.5.0"
#panic-halt = "0.2.0"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
